--- a/index.html
+++ b/index.html
@@ -358,25 +358,25 @@
                                         After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
                                         Blink it Up” to ensure that the LED on the Artemis Board was working properly. I also lowered the baud rate to 115200 bits/s 
                                         to get the example to work.<br> 
-                                        <iframe width="420" height="345" src="https://youtube.com/embed/lo7z2jMCCbU"></iframe>
-                                        <br>
+                                        <img class="img-fluid rounded mb-5" iframe width="420" height="345" src="https://youtube.com/embed/lo7z2jMCCbU"></iframe>
+                                        <br><br>
                                         <b>Example4_Serial</b><br>
                                         I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
                                         board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
                                         be echoed back as the output.<br>  
-                                        <img class="img-fluid rounded mb-5" src="artemislab_serial.png" alt="..." />
+                                        <img class="img-fluid rounded mb-5" iframe width="420" height="345" src="artemislab_serial.png" alt="..." />
                                         <br>
                                         <b>Example2_AnalogRead</b><br>
                                         To test the temperature sensor, I uploaded code from “File->Examples->Artemis Examples->Example2_analogRead”. In the video, 
                                         whenever my thumb wasn’t on the chip, the temperature values were in the 4000s range.  Whenever my thumb pressed on the chip, 
                                         the readings shot up into the 20000s range.<br>
-                                        <iframe width="420" height="345" src="https://youtube.com/embed/U4Pq805myvI"></iframe>
-                                        <br>
+                                        <img class="img-fluid rounded mb-5" iframe width="420" height="345" src="https://youtube.com/embed/U4Pq805myvI"></iframe>
+                                        <br><br>
                                         <b>Example1_MicrophoneOutput</b><br>
                                         To test the microphone, I uploaded code from “File->Examples->PDM->Example1_MicrophoneOutput”. From there, I used an online note 
                                         generator to play the note A4, which has the frequency of 440 Hz.  The serial monitor printed out that the microphone detected a 
                                         frequency of 434 Hz, which is very close to 440 Hz.<br> 
-                                        <iframe width="420" height="345" src="https://youtube.com/embed/uQum4yToBSE"></iframe>
+                                        <img class="img-fluid rounded mb-5" iframe width="420" height="345" src="https://youtube.com/embed/uQum4yToBSE"></iframe>
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
