--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                         I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
                                         board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
                                         be echoed back as the output.<br>  
-                                        <iframe width="600" height="450" src="artemislab_serial.png" alt="..."></iframe><br>
+                                        <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
                                         <br>
 
                                         <b>Example2_AnalogRead</b><br>
