--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                         <br>
                                         <b>Hardware:</b><br>
                                         1 x SparkFun RedBoard Artemis Nano<br>
-                                        1 x USB C-to-C or A-to-C cable<br>
+                                        1 x USB C-to-C Cable<br>
                                         <br>
                                         <b>Software:</b><br>
                                         Arduino IDE<br>
