--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">I'm a junior at Cornell studying Mechanical Engineering.  This website documents the work I'm doing for ECE 4960.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Hi, I'm Allison, and I'm a junior at Cornell studying Mechanical Engineering.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">This website documents the work I'm doing for ECE 4960.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
