--- a/index.html
+++ b/index.html
@@ -354,16 +354,16 @@
                                     <img class="img-fluid rounded mb-5" src="artemislab_cover.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
-                                        <b>Objective:</b><br>
+                                        <b>Objective</b><br>
                                         The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this involves 
                                         becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
                                         using the onboard temperature sensor and Pulse Density Microphone. <br>
                                         <br>
-                                        <b>Hardware:</b><br>
+                                        <b>Hardware</b><br>
                                         1 x SparkFun RedBoard Artemis Nano<br>
                                         1 x USB C-to-C Cable<br>
                                         <br>
-                                        <b>Software:</b><br>
+                                        <b>Software</b><br>
                                         Arduino IDE<br>
                                         <br>
 
