--- a/index.html
+++ b/index.html
@@ -524,43 +524,41 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">*Lab currently in progress*</p>
                                         <b>Objective</b><br>
-                                        The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this involves 
-                                        becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
-                                        using the onboard temperature sensor and Pulse Density Microphone. <br>
+                                        The goal of Lab 5 is to change the car from from manual to open loop control of the car.  Using the Artemis board and two motor driver, it should be able to execute a pre-programmed series of moves. <br>
                                         <br>
                                         <b>Hardware</b><br>
-                                        1 x SparkFun RedBoard Artemis Nano<br>
-                                        1 x USB C-to-C Cable<br>
+                                        1 x SparkFun RedBoard Artemis Nano
+                                        1 x USB cable
+                                        1 x 9DOF IMU sensor
+                                        2 x 4m ToF sensor
+                                        1 x QWIIC Breakout board
+                                        2 x Qwiic connector
+                                        1 x JST2 connector+cable
+                                        1 x Force1 RC car
+                                        1 x Li-Ion 3.7V 850mAh battery
+                                        2 x Dual motor drivers
                                         <br>
                                         <b>Software</b><br>
                                         Arduino IDE<br>
                                         <br>
 
-                                        <b>Example: Blink it Up</b><br>
-                                        After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
-                                        Blink it Up” to ensure that the LED on the Artemis Board was working properly. I also lowered the baud rate to 115200 bits/s 
-                                        to get the example to work.<br> 
+                                        <b>1. Prelab</b><br>
+                                        <br> 
                                         <iframe width="600" height="450" src="https://youtube.com/embed/lo7z2jMCCbU"></iframe><br>
                                         <br>
 
-                                        <b>Example4_Serial</b><br>
-                                        I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
-                                        board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
-                                        be echoed back as the output.<br>  
+                                        <b>2. </b><br>
+                                        <br>  
                                         <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
                                         <br>
 
-                                        <b>Example2_AnalogRead</b><br>
-                                        To test the temperature sensor, I uploaded code from “File->Examples->Artemis Examples->Example2_analogRead”. In the video, 
-                                        whenever my thumb wasn’t on the chip, the temperature values were in the 4000s range.  Whenever my thumb pressed on the chip, 
-                                        the readings shot up into the 20000s range.<br>
+                                        <b>3. Example2_AnalogRead</b><br>
+                                        <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
                                         <br>
 
-                                        <b>Example1_MicrophoneOutput</b><br>
-                                        To test the microphone, I uploaded code from “File->Examples->PDM->Example1_MicrophoneOutput”. From there, I used an online note 
-                                        generator to play the note A4, which has the frequency of 440 Hz.  The serial monitor printed out that the microphone detected a 
-                                        frequency of 434 Hz, which is very close to 440 Hz.<br> 
+                                        <b>4. </b><br>
+                                        <br> 
                                         <iframe width="600" height="450" src="https://youtube.com/embed/uQum4yToBSE"></iframe><br>
                                         <br>
                                         </p>
