--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                                         <b>7. Calibration Demonstration </b><br>
                                         <br> 
                                         To ensure that the car’s motors could spin at the same rate, I implemented a calibration factor.  After much experimentation, I found that the calibration factor value is 20, with the PWM value of the left motor needing to be higher than that of the right motor in order for the car to move in a fairly straight line (e.g. left motor = 70, right motor = 50). *Note: The video was taken on the balcony connecting Upson Hall and Phillips Hall, where each tile is 1-by-1 ft.
-                                        <iframe width="600" height="450" src="https://youtu.be/embed/WfIHviUsHyE"></iframe><br>
+                                        <iframe width="600" height="450" src="https://youtube.com/embed/WfIHviUsHyE"></iframe><br>
                                         <img class="img-fluid rounded mb-5" src="C:\Users\allis\OneDrive\Documents\FastRobots\lab 5 calibration 1.png" alt="..." />
                                         <img class="img-fluid rounded mb-5" src="C:\Users\allis\OneDrive\Documents\FastRobots\lab 5 calibration 2.png" alt="..." />
                                         <br>
@@ -589,7 +589,7 @@
                                         <b>8. Open Loop Control </b><br>
                                         <br> 
                                         To demonstrate open loop and untether control, the car was programmed to travel in a straight line, make a left turn, travel again before making a right turn, and travel once more before stopping.
-                                        <iframe width="600" height="450" src="https://youtu.be/embed/lGtxXBsX-UQ"></iframe><br>
+                                        <iframe width="600" height="450" src="https://www.youtube.com/embed/lGtxXBsX-UQ"></iframe><br>           
                                         <img class="img-fluid rounded mb-5" src="C:\Users\allis\OneDrive\Documents\FastRobots\lab 5 open loop control.png" alt="..." />
                                         <br>
                                         </p>
