--- a/index.html
+++ b/index.html
@@ -560,9 +560,13 @@
                                 
                                         <b>4. Testing Wheel Spinning</b><br>
                                         <br>
-                                        Text
-                                        <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
-                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                        Below is a short video of the wheels spinning as expected.
+                                        <br>
+                                        <iframe width="600" height="450" src="https://youtube.com/embed/ayRli8tIwDU"></iframe><br>
+                                        Below is another short video of the wheels spinning, this time wiht the battery driving the motor drivers.
+                                        <br>
+                                        <iframe width="600" height="450" src="https://youtube.com/embed/wyW_g-jDjYg"></iframe><br>
+                                        <img class="img-fluid rounded mb-5" src="lab 5 wheels spinning code.png" alt="..." />
                                         <br>
                                            
                                         <b>5. Car Components</b><br>
@@ -574,6 +578,7 @@
                                         <b>6. Lower Limit PWM Value</b><br>
                                         <br>
                                         To understand the car’s capabilities, the lower limit of its PWM values were explored for both forward motion and on-axis turns.  This was accomplished by lowering the PWM values until the wheels are not able to start moving from a stationary position.  Eventually, it was found that for forward motion, the lower limit of the PWM values for the right and left wheels are 11 and 31 respectively.  For on-axis turns, the lower limits for the right and left wheels are 31 and 51 respectively.  
+                                        <br>
                                         <br>
 
                                         <b>7. Calibration Demonstration </b><br>
