--- a/index.html
+++ b/index.html
@@ -545,14 +545,27 @@
 
                                         <b>1. Prelab</b><br>
                                         <br> 
-                                        <iframe width="600" height="450" src="https://youtube.com/embed/lo7z2jMCCbU"></iframe><br>
+                                        With two dual motor drivers, each connected to a motor, as well as the Artemis and 850 mAh battery, I decided to set up all of the components as shown in the diagram below.  Although each motor driver is capable of driving two motors, they have been parallel coupled for increased power and speed by connecting the two together. As for the pins, I used A0 and A1 for one motor while A2 and A3 were used for the other one.  
+                                        <br>
+                                        The Artemis and the motor drivers/motors are powered by separate batteries for two reasons.  The first reason is that more batteries means more power for the motors.  The second reason is to reduce any noise from the motors that the Artemis microcontroller could accidentally pick up, which can result in unreliable data.  With this implementation, the Artemis microcontroller will be powered by the 650 mAh battery while the motor drivers/motors will be powered by the 850 mAh battery.  
+                                        <br>
+                                        img width="600" height="450" src="lab 5 diagram.png" alt="..."></img><br>
                                         <br>
 
                                         <b>2. Power Supply and Oscilloscope Hookup</b><br>
                                         <br>  
-                                        <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
+                                        Before connecting the motors to the drivers, I tested the dual motor driver connection to the Artemis by using a power supply instead of the motor and inputting PWM signals from the Artemis.  I then viewed the input and output on an oscilloscope.  Below are a few pictures of the setup:  
                                         <br>
-
+                                        <img width="600" height="450" src="lab 5 setup1.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 setup2.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 setup3.png" alt="..."></img><br>
+                                        <br>
+                                        <br>
+                                        The power supply to the motor driver’s Vin was set to 3.7V, since that is the voltage supplied by the 850 mAh battery that would eventually power the motors.  I sent a few PWM signals with different duty cycles to check that the motor drivers were working.  The first example below was when 180 PWM was sent, and the second example was when 120 PWM was sent.   
+                                        <br>
+                                        <img width="600" height="450" src="lab 5 setup4 180 pwm.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 setup4 120 pwm.png" alt="..."></img><br>
+                                        
                                         <b>3. Testing Motor Drivers</b><br>
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
@@ -563,7 +576,8 @@
                                         Below is a short video of the wheels spinning as expected.
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/ayRli8tIwDU"></iframe><br>
-                                        Below is another short video of the wheels spinning, this time wiht the battery driving the motor drivers.
+                                        <br>
+                                        Below is another short video of the wheels spinning, this time with the battery driving the motor drivers.
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/wyW_g-jDjYg"></iframe><br>
                                         <img class="img-fluid rounded mb-5" src="lab 5 wheels spinning code.png" alt="..." />
