--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                         <br>
                                         The Artemis and the motor drivers/motors are powered by separate batteries for two reasons.  The first reason is that more batteries means more power for the motors.  The second reason is to reduce any noise from the motors that the Artemis microcontroller could accidentally pick up, which can result in unreliable data.  With this implementation, the Artemis microcontroller will be powered by the 650 mAh battery while the motor drivers/motors will be powered by the 850 mAh battery.  
                                         <br>
-                                        img width="600" height="450" src="lab 5 diagram.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 diagram.png" alt="..."></img><br>
                                         <br>
 
                                         <b>2. Power Supply and Oscilloscope Hookup</b><br>
@@ -568,15 +568,19 @@
                                         
                                         <b>3. Testing Motor Drivers</b><br>
                                         <br>
-                                        <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
+                                        Below are the analogWrite code snippet used to test the motor drivers and the results displayed on the oscilloscope:
                                         <br>
-                                
-                                        <b>4. Testing Wheel Spinning</b><br>
+                                        <img width="600" height="450" src="lab 5 wheels spinning code.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 oscilloscope testing motor drivers" alt="..."></img><br>
+                                        <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
                                         <br>
                                         Below is a short video of the wheels spinning as expected.
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/ayRli8tIwDU"></iframe><br>
                                         <br>
+
+                                        <b>4. Testing Wheel Spinning</b><br>
+                                        <br>                                        
                                         Below is another short video of the wheels spinning, this time with the battery driving the motor drivers.
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/wyW_g-jDjYg"></iframe><br>
