--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">*Lab currently in progress*</p>
+                                    <p class="mb-4"></p>
                                         <b>Objective</b><br>
                                         The goal of Lab 5 is to change the car from from manual to open loop control of the car.  Using the Artemis board and two motor driver, it should be able to execute a pre-programmed series of moves. <br>
                                         <br>
@@ -571,7 +571,7 @@
                                         Below are the analogWrite code snippet used to test the motor drivers and the results displayed on the oscilloscope:
                                         <br>
                                         <img width="600" height="450" src="lab 5 wheels spinning code.png" alt="..."></img><br>
-                                        <img width="600" height="450" src="lab 5 oscilloscope testing motor drivers" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab 5 oscilloscope testing motor drivers.png" alt="..."></img><br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/U4Pq805myvI"></iframe><br>
                                         <br>
                                         Below is a short video of the wheels spinning as expected.
