--- a/index.html
+++ b/index.html
@@ -635,7 +635,6 @@
                                         1 x Li-Ion 3.7V 850mAh battery <br>
                                         2 x Dual motor drivers <br>
                                         <br>
-                                        <br>
                                         <b>Software</b><br>
                                         Arduino IDE<br>
                                         <br>
@@ -676,8 +675,8 @@
                                         <br>
                                         Below are the analogWrite code snippet used to test the motor drivers and the results displayed on the oscilloscope:
                                         <br>
+                                        <img width="600" height="450" src="lab 5 oscilloscope_testing-motor-drivers.png" alt="..."></img><br>
                                         <img width="600" height="450" src="lab 5 wheels spinning code.png" alt="..."></img><br>
-                                        <img width="600" height="450" src="lab 5 oscilloscope testing motor drivers.png" alt="..."></img><br>
                                         Below is a short video of the wheels spinning as expected.
                                         <br>
                                         <iframe width="600" height="450" src="https://youtube.com/embed/ayRli8tIwDU"></iframe><br>
