--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                                         <br>
                                         Below are the analogWrite code snippet used to test the motor drivers and the results displayed on the oscilloscope:
                                         <br>
-                                        <img width="600" height="450" src="lab 5 oscilloscope_testing-motor-drivers.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab-5_oscilloscope-testing-motor-drivers.png" alt="..."></img><br>
                                         <img width="600" height="450" src="lab 5 wheels spinning code.png" alt="..."></img><br>
                                         Below is a short video of the wheels spinning as expected.
                                         <br>
