--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                         Packages, and downloading the provided Lab 2 Codebase.  However, prelab was complicated by the Bluetooth software’s incompatibility 
                                         with Windows 11, making it difficult to get the system set up.  Thanks to the help of course TAs and fellow students who found a solution, 
                                         JupyterLab is set up on Windows 11 using Windows Subsystem for Linux (WSL).  Below is a screenshot of the MAC address printing:<br> 
-                                        <img class="img-fluid rounded mb-5" src="lab 2 MAC address printing.png" alt="..." /><br><br>
+                                        <img width="600" height="450" src="lab 2 MAC address printing.png" alt="..."></img><br>
                                         
                                         <b>Codebase</b><br>
                                         The codebase consists of subfolders named ble_arduino and ble_python. ble_arduino includes ble_arduino.ino, which has the Arduino code 
