--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                                         Packages, and downloading the provided Lab 2 Codebase.  However, prelab was complicated by the Bluetooth software’s incompatibility 
                                         with Windows 11, making it difficult to get the system set up.  Thanks to the help of course TAs and fellow students who found a solution, 
                                         JupyterLab is set up on Windows 11 using Windows Subsystem for Linux (WSL).  Below is a screenshot of the MAC address printing:<br> 
+                                        <img width="600" height="450" src="lab 5 setup1.png" alt="..."></img><br
                                         <img width="600" height="450" src="lab-2_MAC-address-printing.png" alt="..."></img><br>
                                         <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
                                         
@@ -468,8 +469,9 @@
                                         MAC address was updated to be one used by the Artemis in the prelab.  Afterwards, the BLEService UUID was changed to avoid accidentally 
                                         connecting my classmates.  This was achieved by generating a new UUID and putting it on the “#define BLE_UUID_TEST_SERVICE” line in 
                                         ble.arduino.ino, as well as the “ble_service” line in connections.yaml.<br>  
-                                        <img class="img-fluid rounded mb-5" src="lab 2 BLE UUIDs.png" alt="..." />
-                                        <img class="img-fluid rounded mb-5" src="lab 2 connection.yaml.png" alt="..." />
+                                        
+                                        <img width="600" height="450" src="lab-2_BLE-UUIDs.png" alt="..."></img><br   
+                                        <img width="600" height="450" src="lab-2_connection-yaml.png" alt="..."></img><br                                                                            
                                         <br>
 
                                         <b>demo.ipynb</b><br>
