--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                                         <br>
                                 
                                         <b>Demo</b><br>
-                                        below is a video showing the results<br> 
+                                        Below is a video showing the results<br> 
                                         <iframe width="600" height="450" src="https://youtu.be/X1IaWZXUA2U"></iframe><br>
                                         <br>
                                         </p>
