--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                                 
                                         <b>Demo</b><br>
                                         Below is a video showing the results<br> 
-                                        <iframe width="600" height="450" src="https://youtu.be/X1IaWZXUA2U"></iframe><br>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/X1IaWZXUA2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                         <br>
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
