--- a/index.html
+++ b/index.html
@@ -598,12 +598,12 @@
                                         One should go in the front so that the robot knows where it is heading to.  As for the second sensor, placing it on the side will be the most useful 
                                         choice for figuring out the positioning of the robot rather than placing it in the front or the back. 
 
-                                        <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
+                                        <img width="600" height="450" src="lab-3_sensor-data-with-chosen-mode.png" alt="..."></img><br>
                                         <br>
 
                                         <b>2. Connecting the ToF sensor to the QWIIC Breakout Board</b><br>
                                         Pictured is the ToF sensor connected to the QWIIC breakout board.<br> 
-                                        <img width="600" height="450" src="artemislab_serial.png" alt="..."></img><br>
+                                        <img width="600" height="450" src=".png" alt="..."></img><br>
                                         <br>
                                         
                                         <b>3. I2C Address</b><br>
